fixed email form H alignment and V box height

--- a/public/style.css
+++ b/public/style.css
@@ -132,7 +132,7 @@ table {
   font:14px 'Lato',Arial,sans-serif;
   display:block;
   width: 65% !important;
-  padding-left: 17%;
+  padding-left: 0%;
   padding-top: 3%;
   text-align: center;
 }
